Updated author email and removed erroneous npm publish command.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "inscript",
   "version": "1.0.0",
   "description": "A modern, plug-and-play CMS for markdown-based blogs. Built with React, Vite, and Express.",
-  "author": "Harsh Ankur <harsh@harshankur.com>",
+  "author": "Harsh Ankur <harshankur@outlook.com>",
   "license": "MIT",
   "homepage": "https://harshankur.github.io/inscript/",
   "repository": {
