feat: implement dark/light theme switcher and enhance metadata UX
Theme System:
- Add dark/light theme switcher with localStorage persistence
- Default to dark mode on first visit
- Add theme toggle button (Sun/Moon icons) in sidebar header
- Enable class-based dark mode in Tailwind config
- Add hydration script to prevent FOUC on page load
- Update all UI components with proper light/dark mode variants
- Fix text contrast issues for better accessibility

Editor UI Improvements:
- Standardize all toolbar and BubbleMenu button sizes to 38x38px
- Fix hover states on editor buttons (toolbar and bubble menu)
- Ensure consistent icon sizes (16px) across all editor controls
- Improve visual consistency between mobile and desktop

Metadata Modal Enhancements:
- Add Enter key support for tag/category search
  - Press Enter to select first matching item
  - Press Enter to create new item when no matches
- Fix newly created tags/categories appearing in available items list
- Include current post's metadata in global lists immediately

Demo Mode:
- Add 5 version history entries to demo post
- Show evolution with changing titles, tags, and categories
- Improve demo data structure with realistic timestamps

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "publish": "npm run setup && vite build --mode readonly && node scripts/generate-data.js && node scripts/generate-sitemap.js",
-    "build:demo": "cross-env DEMO_MODE=true npm run setup && vite build --mode demo",
+    "build:demo": "cross-env DEMO_MODE=true npm run setup && vite build --mode demo && mv docs/index.html docs/inscript_demo.html && mv docs/assets/landing_source.html docs/index.html",
     "prepare": "husky"
   },
   "dependencies": {
